<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_primarycolor"
    tools:context="com.raulcidlimon.conversordedivisas.InfoActivity">

    <Button
        android:id="@+id/btnGoToChangelog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:text="@string/changelog"
        android:textAllCaps="false"
        android:textColor="@color/blanco"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/ibFromInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/goBack"
        android:background="@color/transparent"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/proxima"
            android:text="@string/AppInfo"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/proxima"
            android:text="@string/ApiUsed"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/proxima"
            android:text="@string/AppUpdate"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>