<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:orientation="vertical"
    tools:context="com.raulcidlimon.conversordedivisas.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlArriba"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_primarycolor">

            <ImageButton
                android:id="@+id/ivInfo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_help_outline_white_24dp"
                android:contentDescription="@string/AppInfo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etDivisaBase"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:autofillHints="@string/Zero"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/proxima"
                    android:hint="@string/Zero"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/negro"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerBase"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/proxima"
                    android:gravity="center"
                    android:hint="@string/Divisa"
                    android:padding="2dp"
                    android:popupBackground="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textColorHint="@color/blanco"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOneAToXB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAbajo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_secondarycolor">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etDivisaACambiar"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/proxima"
                    android:hint="@string/Zero"
                    android:autofillHints="@string/Zero"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/negro"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerACambiar"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/proxima"
                    android:gravity="center"
                    android:hint="@string/Divisa"
                    android:padding="2dp"
                    android:popupBackground="@color/colorSecondaryDark"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textColorHint="@color/blanco"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text=""
                android:textColor="@color/blanco"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_centerInParent="true"
            android:background="@color/blanco" />

        <ImageButton
            android:id="@+id/ibCambiarValores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/swapValue"
            android:layout_centerInParent="true"
            android:background="@drawable/circle"
            android:src="@drawable/ic_swap_vert" />


    </RelativeLayout>

</FrameLayout>